test.configs/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: odh-gateway-service
  namespace: opendatahub
spec:
  type: LoadBalancer
  ports:
  - port: 443
    targetPort: 8443
    name: https
  - port: 80
    targetPort: 8080
    name: http
  selector:
    app: odh-gateway
