test.configs/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: odh-gateway-route
  namespace: opendatahub
  ownerReferences:
  - apiVersion: v1
    kind: Service
    name: data-science-gateway-data-science-gateway-class
    uid: "c639afab-0309-4b0a-ad11-15a61411d8a0"
    controller: true
    blockOwnerDeletion: true
spec:
  host: data-science-gateway.apps-crc.testing
  to:
    kind: Service
    name: data-science-gateway-data-science-gateway-class
    weight: 100
  port:
    targetPort: 443
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
